--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/Rwanda-Arts-Initiative/src/main.jsx" type="text/javascript"></script>
+    <script type="module">
+      import.meta.env.BASE_URL = '/';
+      import('./src/main.jsx').catch(err => console.error(err));
+    </script>
   </body>
 </html>
